[gd_scene load_steps=12 format=2]

[ext_resource path="res://Font/YujiSyuku-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Code_Script/CharacterMenu.gd" type="Script" id=2]
[ext_resource path="res://Assets/healthbar.png" type="Texture" id=3]
[ext_resource path="res://Assets/healthbar3.png" type="Texture" id=4]
[ext_resource path="res://Assets/healthbar2.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 25
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 25
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 35
font_data = ExtResource( 1 )

[node name="CharacterMenu" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 2 )

[node name="ColorMenu" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0.101961, 0.996078, 0.388235, 0.298039 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharacInfo" type="Label" parent="."]
margin_right = 1280.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 1 )
text = "Character Info"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorStat" type="ColorRect" parent="."]
margin_left = 10.0
margin_top = 100.0
margin_right = 630.0
margin_bottom = 625.0
color = Color( 0.00392157, 0.262745, 0.0235294, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stat" type="Label" parent="ColorStat"]
margin_left = 50.0
margin_top = 20.0
margin_right = 250.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 2 )
text = "Statistique :"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Life" type="Label" parent="ColorStat"]
margin_left = 70.0
margin_top = 100.0
margin_right = 175.0
margin_bottom = 137.0
custom_fonts/font = SubResource( 3 )
text = "Life"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBar" type="TextureProgress" parent="ColorStat/Life"]
margin_left = 100.0
margin_top = -10.0
margin_right = 164.0
margin_bottom = 70.0
texture_under = ExtResource( 3 )
texture_over = ExtResource( 5 )
texture_progress = ExtResource( 4 )
tint_progress = Color( 0.976471, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Strengh" type="Label" parent="ColorStat"]
margin_left = 70.0
margin_top = 200.0
margin_right = 175.0
margin_bottom = 237.0
custom_fonts/font = SubResource( 4 )
text = "Strengh"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorInvent" type="ColorRect" parent="."]
margin_left = 650.0
margin_top = 100.0
margin_right = 1270.0
margin_bottom = 625.0
color = Color( 0.00392157, 0.262745, 0.0235294, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inventaire" type="Label" parent="ColorInvent"]
margin_left = 50.0
margin_top = 20.0
margin_right = 219.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 5 )
text = "Inventaire"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back_inventorie" type="Button" parent="."]
margin_left = 18.0
margin_top = 634.0
margin_right = 1258.0
margin_bottom = 706.0
custom_fonts/font = SubResource( 6 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="back_inventorie" to="." method="_on_back_inventorie_pressed"]
